# livestats

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
lib/: CMakeLists.txt
lib/include/livestats/: estimator.hpp  naive_mean_estimator.hpp  sliding_time_window_mean_estimator.hpp  sliding_time_window_tags.hpp  sliding_time_window_variance_estimator.hpp  sliding_window_mean_estimator.hpp  sliding_window_variance_estimator.hpp  welford_mean_estimator.hpp  welford_variance_estimator.hpp  zscore_outlier_estimator_adaptor.hpp
lib/include/livestats/math/: non_negative.hpp
lib/src/: estimator.cpp  naive_mean_estimator.cpp  sliding_time_window_mean_estimator.cpp  sliding_time_window_variance_estimator.cpp  sliding_window_mean_estimator.cpp  sliding_window_variance_estimator.cpp  welford_mean_estimator.cpp  welford_variance_estimator.cpp  zscore_outlier_estimator_adaptor.cpp
test/: CMakeLists.txt  naive_mean_estimator_tests.cpp  sliding_time_window_mean_estimator_tests.cpp  sliding_time_window_variance_estimator_tests.cpp  sliding_window_mean_estimator_tests.cpp  sliding_window_variance_estimator_tests.cpp  welford_mean_estimator_tests.cpp  welford_variance_estimator_tests.cpp  zscore_outlier_estimator_adaptor_tests.cpp
tools/devbox/: devbox.Dockerfile
